fix overflow layover

--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,6 @@
   padding: 0;
 }
 
-/* body {
-  overflow-y: hidden;
-} */
-
 /* -------------------------------- HEADER -------------------------------- */
 
 header {
@@ -39,7 +35,7 @@ main {
   background-image: url(../img/cork.png);
   background-size: contain;
 
-  min-height: 100vh;
+  height: 100vh;
 }
 
 .container {
